# scrapy_tuto_qgis_cnrs

./: .linkcheckerrc  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg
content/: .pages  01_00_prise-en-main.md  01_01_quest-ce-quun-sig-un-peu-de-theorie.md  01_02_manipuler-de-linformation-geographique.md  01_03_formats-de-donnees-sig.md  01_04_espace-de-travail-projet-qgs.md  02_00_geodesie.md  02_01_introduction-a-la-geodesie.md  02_02_des-coordonnees-oui-mais-dans-quel-systeme.md  02_03_couches-et-projets-a-chacun-son-systeme.md  02_04_passer-dun-systeme-de-coordonnees-a-un-autre.md  03_00_recherche-et-ajout-de-donnees.md  03_01_recherche-de-donnees-sig-sur-internet.md  03_02_ajout-de-donnees-via-des-flux.md  03_03_ajout-de-donnees-ponctuelles-a-partir-dun-fichier-texte.md  03_04_ajouter-un-fonds-de-carte-en-ligne.md  03_05_qgis-et-openstreetmap.md  04_00_georeferencement.md  04_01_principe-du-georeferencement.md  04_02_georeferencement-les-preliminaires.md  04_03_points-de-calage-avec-un-carroyage.md  04_04_parametrage-du-georeferencement.md  04_05_lancer-le-georeferencement.md  04_06_points-de-calage-en-se-basant-sur-une-couche-de-reference.md  05_00_numerisation.md  05_01_creation-dune-couche-vide.md  05_02_ajout-de-points-dans-une-couche.md  05_03_saisie-des-donnees-attributaires-en-savoir-plus.md  05_04_numeriser-des-lignes.md  05_05_numeriser-des-polygones.md  05_06_quelques-notions-de-topologie.md  06_00_selectionner-des-donnees-les-requetes.md  06_01_selectionner-des-elements-en-fonction-de-leurs-donnees-attributaires-requetes-attributaires.md  06_02_selectionner-des-elements-en-fonction-de-leur-position-par-rapport-a-dautres-requetes-spatiales.md  06_03_combiner-des-requetes.md  06_04_pour-aller-plus-loin-requetes-sql.md  07_00_creer-supprimer-renommer-et-calculer-des-champs.md  (+20 more)
(+28 files in other folders)
