# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "scraper_tuto_qgis_cnrs"
version = "0.1.0"
description = "Récupération automatisée du site tuto QGIS du CNRS (par Julie Pierson)."
authors = [{ name = "Julien Moura", email = "geotribu@gmail.com" }]

dependencies = ["markdownify >= 0.11", "Pillow >= 10.0.1", "scrapy >= 2.11,<3"]

[project.optional-dependencies]
dev = ["black", "isort >= 5.12.0", "pre-commit >3,<5", "ruff >= 0.0.281"]


[tool.flake8]
count = true
exclude = [
    ".git",
    "__pycache__",
    "docs/conf.py",
    "old",
    "build",
    "dist",
    "tests",
    ".venv*",
    ".python_packages",
]
ignore = [
    "C901",
    "E121",
    "E123",
    "E126",
    "E203",
    "E226",
    "E231",
    "E24",
    "E501",
    "E704",
    "W503",
    "W504",
]
max-complexity = 15
max-doc-length = 130
max-line-length = 100
output-file = "dev_flake8_report.txt"
statistics = true
tee = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--junitxml=junit/test-results.xml --cov-config=setup.cfg --cov=scraper_tuto_cnrs --cov-report=html --cov-report=xml --ignore=tests/_wip/"
norecursedirs = ".* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip"
python_files = "test_*.py"
testpaths = "tests"

[tool.coverage.run]
branch = true
include = ["scraper_tuto_cnrs/*"]
omit = [".venv/*", "*migrations*", "*tests*", "*node_modules*"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
ignore_errors = true
show_missing = true
